@@ -1,3 +1,7 @@
+2007-01-02  Paolo Maggi  <paolo@gnome.org> 
+
+	* gedit/gedit-python-plugin.c: cosmetic changes
+
 2006-12-31  Paolo Borelli  <pborelli@katamail.com>
 
 	* README:
